# minrx

./: .gitignore  ALGORITHM.txt  ChangeLog  LICENSE.txt  Makefile  README.md  TODO  charset.c  charset.h  meson.build  minrx.3  minrx.c  minrx.cpp  minrx.h  rxgrep.c  tryit.c
